--- a/web/AgregarProductos.xhtml
+++ b/web/AgregarProductos.xhtml
@@ -23,7 +23,8 @@
                                 <p:outputLabel value="Nombre"></p:outputLabel>
                                 <p:inputText  value="#{productosB.producto.nombre}"  required="true"/>  
                                 <p:outputLabel value="Categoría"></p:outputLabel>
-                                <p:selectOneMenu  value="#{productosB.producto.id_Categoria}" >     
+                                <p:selectOneMenu  value="#{productosB.producto.id_Categoria}" >  
+                                    <f:selectItem  itemLabel="Seleccione una categoría" itemValue="#{null}" /> 
                                     <f:selectItem  itemLabel="Impresora" itemValue="1" /> 
                                     <f:selectItem  itemLabel="Computadoras" itemValue="2" /> 
                                     <f:selectItem  itemLabel="Cámaras" itemValue="3" />
@@ -35,7 +36,7 @@
                                 <p:outputLabel value="Precio"></p:outputLabel>
                                 <p:inputText  value="#{productosB.producto.precio}"  required="true"/>  
                                 <p:outputLabel value="Imagen"></p:outputLabel>
-                                <p:fileUpload fileUploadListener="#{productosB.producto.imagen}" mode="advanced" auto="true"  />
+                                <p:fileUpload fileUploadListener="#{productosB.obtenerImagenProducto}" mode="advanced" auto="true" label="Seleccione un archivo" />
 
 
 
