--- a/web/Impresoras.xhtml
+++ b/web/Impresoras.xhtml
@@ -20,7 +20,7 @@
 
                 <p:panel header="#{producto.nombre}" style="text-align:center; width: 100%; ">
                     <h:panelGrid columns="1" style="width:100%; text-align: center" >
-                        <p:graphicImage value="#{VistaProductosB.imageProductoImpresora}" width="100%" height="30%" cache="false">
+                        <p:graphicImage value="#{VistaProductosB.imageProductoImpresora}" width="250px" height="200px" cache="false">
                             <f:param name="id" value="#{producto.id_Producto}"/>
                             <f:param name="imagen" value="#{producto.imagen}" />
                         </p:graphicImage>
