--- a/web/Impresoras.xhtml
+++ b/web/Impresoras.xhtml
@@ -30,7 +30,7 @@
                             <h:outputText styleClass="fa fa-search" style="margin:0 auto;"/>
                             <f:setPropertyActionListener value="#{producto}" target="#{VistaProductosB.productoSeleccionado}" />
                         </p:commandLink>
-                        <p:commandLink action="#{VistaProductosB.agregarProducto()}">
+                        <p:commandLink action="#{VistaProductosB.agregarCarrito()}">
                             <h:outputText styleClass="fa fa-shopping-cart" style="margin:0 auto;"/>
                             <f:setPropertyActionListener value="#{producto}" target="#{VistaProductosB.productoSeleccionado}" />
                         </p:commandLink>
