--- a/web/Portatiles.xhtml
+++ b/web/Portatiles.xhtml
@@ -8,49 +8,56 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="content">
-        <h:form id="form">
-            <p:dataGrid var="producto" value="#{productosB.productosPortatiles}" columns="3" layout="grid"
-                        rows="12" paginator="true" id="cars"
+        <h:form id="form">         
+            <p:dataGrid var="producto" value="#{VistaProductosB.productosPortatiles}" columns="3" layout="grid"
+                        rows="12" paginator="true" id="productos"
                         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                        rowsPerPageTemplate="6,12,16">
+                        rowsPerPageTemplate="1,2,3">
 
                 <f:facet name="header">
-                    Cars for Sale
+                    Portátiles
                 </f:facet>
-
-                <p:panel header="#{producto.id_Producto}" style="text-align:center">
-                    <h:panelGrid columns="1" style="width:100%">
-                        <p:graphicImage name="demo/images/car/#{car.brand}.gif"/> 
-
-                        <h:outputText value="#{producto.nombre}" />
-
-                        <p:commandLink update=":form:carDetail" oncomplete="PF('carDialog').show()" title="View Detail">
-                            <h:outputText styleClass="pi pi-search" style="margin:0 auto;"/>
-                            <f:setPropertyActionListener value="#{car}" target="#{dataGridView.selectedCar}" />
+                <p:blockUI block="panel" trigger="agregar">
+                    Se agregó al carrito.<br/>
+                    <p:graphicImage library="img" name="check_1.gif" width="200px" height="150px"/>
+                </p:blockUI>
+                <p:panel id="panel" header="#{producto.nombre}" style="text-align:center; width: 100%; ">                    
+                    <h:panelGrid columns="1" style="width:100%; text-align: center" >
+                        <p:graphicImage value="#{VistaProductosB.imageProductoPortatil}" width="250px" height="200px" cache="false">
+                            <f:param name="id" value="#{producto.id_Producto}"/>
+                            <f:param name="imagen" value="#{producto.imagen}" />
+                        </p:graphicImage>
+                        <br></br>
+                        <h:outputText value="₡#{producto.precio}"  />
+                        <p:commandLink update=":form:DetalleProducto" oncomplete="PF('productoDialog').show()" title="View Detail">
+                            <h:outputText styleClass="fa fa-search" style="margin:0 auto;"/>
+                            <f:setPropertyActionListener value="#{producto}" target="#{VistaProductosB.productoSeleccionado}" />
+                        </p:commandLink>
+                        <p:commandLink id="agregar" action="#{VistaProductosB.agregarCarrito()}">
+                            <h:outputText styleClass="fa fa-shopping-cart" style="margin:0 auto;"/>
+                            <f:setPropertyActionListener value="#{producto}" target="#{VistaProductosB.productoSeleccionado}" />
                         </p:commandLink>
                     </h:panelGrid>
+
                 </p:panel>
 
             </p:dataGrid>
 
-            <p:dialog header="Car Info" widgetVar="carDialog" modal="true" showEffect="fade" hideEffect="fade" resizable="false">
-                <p:outputPanel id="carDetail" style="text-align:center;">
-                    <p:panelGrid  columns="2" rendered="#{not empty dataGridView.selectedCar}" columnClasses="label,value">
-                        <f:facet name="header">
-                            <p:graphicImage name="demo/images/car/#{dataGridView.selectedCar.brand}-big.gif"/> 
-                        </f:facet>
+            <p:dialog header="Información del Producto" widgetVar="productoDialog" modal="true" showEffect="fade" hideEffect="fade" resizable="false">
+                <p:outputPanel id="DetalleProducto" style="text-align:center;">
+                    <p:panelGrid  columns="2" rendered="#{not empty VistaProductosB.productoSeleccionado}" style="width:100%; text-align: center">
 
-                        <h:outputText value="Id:" />
-                        <h:outputText value="#{dataGridView.selectedCar.id}" />
+                        <h:outputLabel value="Id:" />
+                        <h:outputText value="#{VistaProductosB.productoSeleccionado.id_Producto}" />
 
-                        <h:outputText value="Year" />
-                        <h:outputText value="#{dataGridView.selectedCar.year}" />
+                        <h:outputLabel value="Nombre:" />
+                        <h:outputText value="#{VistaProductosB.productoSeleccionado.nombre}" />
 
-                        <h:outputText value="Color:" />
-                        <h:outputText value="#{dataGridView.selectedCar.color}" style="color:#{dataGridView.selectedCar.color}"/>
+                        <h:outputLabel value="Descripción:" />
+                        <h:outputText value="#{VistaProductosB.productoSeleccionado.descripcion}"/>
 
-                        <h:outputText value="Price" />
-                        <h:outputText value="$#{dataGridView.selectedCar.price}" />
+                        <h:outputLabel value="Precio" />
+                        <h:outputText value="$#{VistaProductosB.productoSeleccionado.precio}" />
                     </p:panelGrid>
                 </p:outputPanel>
             </p:dialog>
