--- a/web/CCTV.xhtml
+++ b/web/CCTV.xhtml
@@ -9,13 +9,13 @@
 
     <ui:define name="content">
         <h:form id="form">         
-            <p:dataGrid var="producto" value="#{VistaProductosB.productosEscritorio}" columns="3" layout="grid"
+            <p:dataGrid var="producto" value="#{VistaProductosB.productosCCTV}" columns="3" layout="grid"
                         rows="12" paginator="true" id="productos"
                         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                         rowsPerPageTemplate="1,2,3">
 
                 <f:facet name="header">
-                    Escritorio
+                    CCTV
                 </f:facet>
                 <p:blockUI block="panel" trigger="agregar">
                     Se agregó al carrito.<br/>
@@ -23,7 +23,7 @@
                 </p:blockUI>
                 <p:panel id="panel" header="#{producto.nombre}" style="text-align:center; width: 100%; ">                    
                     <h:panelGrid columns="1" style="width:100%; text-align: center" >
-                        <p:graphicImage value="#{VistaProductosB.imageProductoEscritorio}" width="250px" height="200px" cache="false">
+                        <p:graphicImage value="#{VistaProductosB.imageProductoCCTV}" width="250px" height="200px" cache="false">
                             <f:param name="id" value="#{producto.id_Producto}"/>
                             <f:param name="imagen" value="#{producto.imagen}" />
                         </p:graphicImage>
