--- a/web/Carrito.xhtml
+++ b/web/Carrito.xhtml
@@ -28,7 +28,7 @@
                     <h:outputText value="#{producto.cantidadCarrito}"/>
                 </p:column>
 
-                <p:column headerText="Precio">
+                <p:column headerText="Precio por Unidad">
                     <h:outputText value="#{producto.precio}" />
                 </p:column>
 
