--- a/web/Impresoras.xhtml
+++ b/web/Impresoras.xhtml
@@ -7,12 +7,11 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:define name="content">
+    <ui:define name="content"  >
         <h:form id="form">         
             <p:dataGrid var="producto" value="#{VistaProductosB.productosImpresoras}" columns="3" layout="grid"
-                        rows="12" paginator="true" id="productos"
-                        paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                        rowsPerPageTemplate="1,2,3">
+                        rows="9" paginator="true" id="productos"
+                        paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
 
                 <f:facet name="header">
                     Impresoras
