--- a/web/Contactenos.xhtml
+++ b/web/Contactenos.xhtml
@@ -8,8 +8,8 @@
                 xmlns:b="http://bootsfaces.net/ui">
     <h:outputStylesheet name="cssLayout.css"/>
     <h:outputStylesheet library="primefaces-7.0" name="primeicons/primeicons.css"/>
-    <ui:define name="content">
-        <h:form >      
+    <ui:define name="content" >
+        <h:form>        
             <h1 style="color: #FDC134">Contáctenos</h1> <br></br><br></br><br></br><br></br><br></br>
             <div align='center'>
                 <div class="p-field">
@@ -33,13 +33,13 @@
             <div align='center'>
                 <p:commandButton value="Enviar"  actionListener="#{ContactenosB.enviarCorreo}" style="background-color: #FDC134" /> 
             </div>
-        </h:form><br></br><br></br><br></br>
+        </h:form><br></br><br></br><br></br><br></br><br></br><br></br>
         <div align='center'>
             <span style="font-size: 2em; color: white;">
                 <i class="fa fa-envelope"></i>
                 <p>npctecno@gmail.com</p>
                 </span>  
-        </div>  <br></br><br></br><br></br>
+        </div>
         <div align='center'>
              <span style="font-size: 2em; color: white;">
           <i class="fa fa-whatsapp" align='center'></i>
