--- a/web/Plantillas/usuarios.xhtml
+++ b/web/Plantillas/usuarios.xhtml
@@ -14,8 +14,7 @@
         <title>NPC</title>
     </h:head>
 
-    <h:body style="background-color: #213B52;" class="oculto"> 
-
+    <h:body style="background-color: #213B52;"> 
         <div id="top">
             <ui:insert name="top">
                 <h:form>
