--- a/web/Impresoras.xhtml
+++ b/web/Impresoras.xhtml
@@ -56,7 +56,7 @@
                         <h:outputText value="#{VistaProductosB.productoSeleccionado.descripcion}"/>
 
                         <h:outputLabel value="Precio" />
-                        <h:outputText value="$#{VistaProductosB.productoSeleccionado.precio}" />
+                        <h:outputText value="₡#{VistaProductosB.productoSeleccionado.precio}" />
                     </p:panelGrid>
                 </p:outputPanel>
             </p:dialog>
