--- a/web/Productos.xhtml
+++ b/web/Productos.xhtml
@@ -49,7 +49,7 @@
                         <h:outputText value="#{dataGridView.selectedCar.color}" style="color:#{dataGridView.selectedCar.color}"/>
 
                         <h:outputText value="Price" />
-                        <h:outputText value="$#{dataGridView.selectedCar.price}" />
+                        <h:outputText value="₡#{VistaProductosB.productoSeleccionado.precio}" />
                     </p:panelGrid>
                 </p:outputPanel>
             </p:dialog>
