--- a/web/Plantillas/PlantillaAdministrador.xhtml
+++ b/web/Plantillas/PlantillaAdministrador.xhtml
@@ -30,6 +30,9 @@
                                 <b:navLink value="Trabajos Realizados" href=""></b:navLink>
                                 <b:navLink value="Contáctenos" href="Contactenos.xhtml"></b:navLink>
                                 <b:navLink value="Administrador" href="indexAdministrador.xhtml"></b:navLink>
+                                 <b:dropMenu value="Manual de Usuario">
+                                    <b:navLink value="Manual de Usuario" href="AgregarProductos.xhtml"></b:navLink>
+                                </b:dropMenu>
                             </b:navbarLinks>
                         </ul>
                     </b:navBar>
