--- a/web/Plantillas/PlantillaAdministrador.xhtml
+++ b/web/Plantillas/PlantillaAdministrador.xhtml
@@ -26,6 +26,8 @@
                                 <b:navLink value="Servicios" href="" ></b:navLink>      
                                 <b:dropMenu value="Productos">
                                     <b:navLink value="Agregar Productos" href="AgregarProductos.xhtml"></b:navLink>
+                                    <b:navLink value="Editar Productos" href="EditarProductos.xhtml"></b:navLink>
+                                    <b:navLink value="Eliminar Productos" href="EliminarProducto.xhtml"></b:navLink>
                                 </b:dropMenu>
                                 <b:navLink value="Trabajos Realizados" href=""></b:navLink>
                                 <b:navLink value="Contáctenos" href="Contactenos.xhtml"></b:navLink>
