--- a/web/EditarProductos.xhtml
+++ b/web/EditarProductos.xhtml
@@ -10,19 +10,8 @@
         <h:form id="form">         
             <p:dataTable  var="producto" value="#{EditarProductoB.productos}" rows="15"  paginator="true" 
                           paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
-                          {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" emptyMessage="No hay productos"
-                          filteredValue="#{EditarProductoB.listaFiltrados}" widgetVar="tablaProductos"
+                          {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" emptyMessage="No hay productos" widgetVar="tablaProductos"
                           reflow="true" style="text-align: center;" >
-
-                <f:facet name="header">
-                    <p:outputPanel>
-                        <p:panelGrid  columns="1" columnClasses="ui-grid-col-12" layout="grid" styleClass="ui-panelgrid-blank" style="text-align: right" >
-                            <p:inputText id="globalFilter" onkeyup="PF('tablaProductos').filter()" style="width:150px; height: 25px">
-                                <i class="pi pi-search"></i>
-                            </p:inputText>
-                        </p:panelGrid>
-                    </p:outputPanel>
-                </f:facet>
                 <p:column headerText="Código" style="text-align: center;">
                     <h:outputText value="#{producto.codigo}" />
                 </p:column>
@@ -31,7 +20,7 @@
                     <h:outputText value="#{producto.nombre}" />
                 </p:column>
                 <p:column headerText="Categoría" style="text-align: center;">
-                    <h:outputText value="#{producto.id_Categoria}" />
+                    <h:outputText value="#{producto.categoria}" />
                 </p:column>
                 <p:column headerText="Stock" style="text-align: center;">
                     <h:outputText value="#{producto.stock}" />
@@ -42,9 +31,40 @@
                 <p:column headerText="Precio" style="text-align: center;">
                     <h:outputText value="#{producto.precio}" />
                 </p:column>
-
-                <p:column style="width: 50px; text-align: center">
-                    <p:commandButton id="buscar"  style="border: 0px" icon="pi pi-search"/>  
+                <p:column headerText="Editar" style="text-align: center;">
+                    <p:commandLink  oncomplete="PF('editDialog').show()" styleClass="fa fa-edit"/>
+                    <p:dialog header="Información del Producto" widgetVar="editDialog" modal="true" resizable="false">
+                        <p:panelGrid columns="2"  style="width:700px; text-align: center">
+                            <h:outputLabel value="Código:" style="color: black"/>
+                            <p:inputText style="width: 100%" value="#{EditarProductoB.productoSeleccionado.codigo}"/>
+                            <h:outputLabel value="Nombre:" style="color: black"/>
+                            <p:inputText style="width: 100%" value="#{EditarProductoB.productoSeleccionado.nombre}"/>
+                            <h:outputLabel value="Categoría:" style="color: black"/>
+                            <p:selectOneMenu  value="#{EditarProductoB.productoSeleccionado.id_Categoria}" >  
+                                <f:selectItem  itemLabel="Seleccione una categoría" itemValue="#{null}" /> 
+                                <f:selectItem  itemLabel="Impresora" itemValue="1" /> 
+                                <f:selectItem  itemLabel="Escritorio" itemValue="2" /> 
+                                <f:selectItem  itemLabel="Portátiles" itemValue="3" />
+                                <f:selectItem  itemLabel="Cámaras" itemValue="4" />
+                                <f:selectItem  itemLabel="CCTV" itemValue="5" />
+                                <f:selectItem  itemLabel="Protectores de electricidad" itemValue="6" />
+                                <f:selectItem  itemLabel="Oficina" itemValue="7" />
+                            </p:selectOneMenu>
+                            <h:outputLabel value="Stock:" style="color: black"/>
+                            <p:inputText style="width: 100%" value="#{EditarProductoB.productoSeleccionado.stock}"/>
+                            <h:outputLabel value="Descripción:" style="color: black"/>
+                            <p:inputText style="width: 100%" value="#{EditarProductoB.productoSeleccionado.descripcion}"/>
+                            <h:outputLabel value="Precio:" style="color: black"/>
+                            <p:inputText style="width: 100%" value="#{EditarProductoB.productoSeleccionado.precio}"/>
+                        </p:panelGrid>
+                        <br></br>
+                        <p:panelGrid columns="1"  style="width:700px; text-align: center; border-style:hidden">
+                            <p:commandLink actionListener="#{EditarProductoB.editarProducto(producto.id_Producto)}" value="Guardar" />
+                        </p:panelGrid>
+                    </p:dialog>
+                </p:column>
+                <p:column headerText="Eliminar" style="text-align: center;">
+                    <p:commandLink styleClass="fa fa-remove" action="#{EditarProductoB.eliminarProducto(producto.id_Producto)}"/>
                 </p:column>
             </p:dataTable>
         </h:form>
