--- a/web/Plantillas/PlantillaAdministrador.xhtml
+++ b/web/Plantillas/PlantillaAdministrador.xhtml
@@ -21,7 +21,7 @@
                         <ul class="nav navbar-nav navbar-right">  
 
                             <b:navbarLinks>
-                                <b:navLink value="Inicio" href="index.xhtml" ></b:navLink>  
+                              
                                 <b:navLink value="Acerca de nosotros" href="" ></b:navLink>    
                                 <b:navLink value="Servicios" href="" ></b:navLink>      
                                 <b:dropMenu value="Productos">
@@ -29,10 +29,9 @@
                                     <b:navLink value="Editar Productos" href="EditarProductos.xhtml"></b:navLink>
                                 </b:dropMenu>
                                 <b:navLink value="Trabajos Realizados" href=""></b:navLink>
-                                <b:navLink value="Contáctenos" href="Contactenos.xhtml"></b:navLink>
                                 <b:navLink value="Administrador" href="indexAdministrador.xhtml"></b:navLink>
                                  <b:dropMenu value="Manual de Usuario">
-                                    <b:navLink value="Manual de Usuario" href="AgregarProductos.xhtml"></b:navLink>
+                                    <b:navLink value="Manual de Usuario" href="manual.xhtml"></b:navLink>
                                 </b:dropMenu>
                             </b:navbarLinks>
                         </ul>
