--- a/web/AcercaD.xhtml
+++ b/web/AcercaD.xhtml
@@ -1,10 +1,34 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./Plantillas/usuarios.xhtml">
+                template="./Plantillas/usuarios.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:b="http://bootsfaces.net/ui">
 
     <ui:define name="content">
-        
+        <h:form>
+            <strong>
+                <img src="img/npcTest.png" width="500" height="600"/>
+                <div class="acercaD" >
+                    <h3 style="color: #FDC134" align="justify">Misión</h3>
+                    <p class="acercaD2" style="color: white">Satisfacer las necesidades en todos los ámbitos en los cuales podamos trabajar siendo la solución, confianza y satisfacción que las personas busquen y deseen. 
+
+                        Hacemos y deseamos que la tecnología sea sencilla de entender en aquellas personas con menos práctica y conocimiento acoplando nuestras formas técnicas al explicar.
+
+                        Nuestro público será bien recibido sin discriminar edades, conocimientos, procedencia, nacionalidades, de lo contrario seremos otro hogar donde puedan regresar
+                    </p>
+                </div>
+                <div class="acerca" >
+                    <h3 style="color: #FDC134" align="justify">Visión</h3>
+                    <p class="acercaD2" style="color: white">Nuestra empresa al ser una con tecnología nos da ventaja en el crecimiento y avance de esta, tratamos de crecer al mismo tiempo que la tecnología lo hace, así que las condiciones que le ofrecemos a las y los clientes será optima honesta, nos acoplamos a los gustos, pero siempre vamos a recomendar la mejor opción para que obtengan el rendimiento máximo de sus equipos.
+                    </p>
+                </div>
+            </strong>
+
+
+        </h:form>
+
+
     </ui:define>
 
 </ui:composition>
