--- a/web/Servicios.xhtml
+++ b/web/Servicios.xhtml
@@ -1,10 +1,72 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./Plantillas/usuarios.xhtml">
+                template="./Plantillas/usuarios.xhtml"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <ui:define name="content">
-        content
+        <div class="card">
+            <p:panelGrid columns="1" style="position: absolute;
+                         top: 12%;
+                         left: 2%;">
+                <f:facet name="header">
+                    <img src="img/venta-de-hardware-min.jpg" width="450px" height="300px"/>
+                </f:facet>
+                <h:outputText value="Informática"/>
+                 <ul>
+                    <ui:fragment rendered="true"><li>Mantenimiento de Hardware y Software</li></ui:fragment>
+                    <ui:fragment rendered="true"><li>Instalación de Programas</li></ui:fragment>
+                </ul>  
+            </p:panelGrid>
+        </div>
+        <div >
+            <p:panelGrid  columns="1" style="position: absolute;
+                          top: 12%;
+                          left: 60%;">
+                <f:facet name="header">
+                    <img src="img/camara.jpg" width="450px" height="300px"/>
+                </f:facet>
+                <h:outputText value="Sistema CCTV"></h:outputText>
+                <ul>
+                    <ui:fragment rendered="true"><li>Ventas e Instalación</li></ui:fragment>
+                    <ui:fragment rendered="true"><li>Mantenimiento preventivo y Correctivo</li></ui:fragment>
+                </ul>  
+
+            </p:panelGrid>
+        </div>
+        <div >
+            <p:panelGrid  columns="1" style="position: absolute;
+                          top: 70%;
+                          left: 2%;">
+                <f:facet name="header">
+                    <img src="img/circuito.jpg" width="450px" height="300px"/>
+                </f:facet>
+
+                <h:outputText value="Electrónica"></h:outputText>
+                 <ul>
+                    <ui:fragment rendered="true"><li>Revisión y Reparación de tarjetas electrónicas integradas</li></ui:fragment>
+                    <ui:fragment rendered="true"><li>Corriente y circuitos electrónicos en el hogar</li></ui:fragment>
+                </ul>  
+
+
+            </p:panelGrid>
+        </div>
+        <div >
+            <p:panelGrid  columns="1" style="position: absolute;
+                          top: 70%;
+                          left: 60%;">
+                <f:facet name="header">
+                    <img src="img/audio.jpg" width="450px" height="300px"/>
+                </f:facet>
+                <h:outputText value="Audio"/>
+                <ul>
+                    <ui:fragment rendered="true"><li>Cableado e Instalación</li></ui:fragment>
+                    <ui:fragment rendered="true"><li>Reparación de dispositivos de Audio</li></ui:fragment>
+                </ul>  
+            </p:panelGrid>
+        </div>
     </ui:define>
 
 </ui:composition>
