--- a/web/TrabajosRealizados.xhtml
+++ b/web/TrabajosRealizados.xhtml
@@ -16,11 +16,11 @@
         <br></br>   
         <br></br>   
         <div class="card">
-            <p:contentFlow value="#{imagesView.images}" var="image">
-                <p:graphicImage name="demo/images/nature/#{image}" styleClass="content"/>
-                <div class="caption">#{image}</div>
-            </p:contentFlow>
-        </div>
+            <p:galleria value="#{carousel.images}" var="image" panelWidth="500" panelHeight="313" showCaption="true">
+                <img src="img/audio.jpg/#{image}" alt="Image Description for #{image}"/>
+                                title="#{image}"/>
+            </p:galleria>
+        </div> 
     </ui:define>
 
 </ui:composition>
