--- a/web/TrabajosRealizados.xhtml
+++ b/web/TrabajosRealizados.xhtml
@@ -4,7 +4,8 @@
                 template="./Plantillas/usuarios.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://xmlns.jcp.org/jsf/core">
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:b="http://bootsfaces.net/ui">
 
 
     <ui:define name="content">
@@ -15,12 +16,20 @@
         <br></br>   
         <br></br>   
         <br></br>   
-        <div class="card">
-            <p:galleria value="#{carousel.images}" var="image" panelWidth="500" panelHeight="313" showCaption="true">
-                <img src="img/audio.jpg/#{image}" alt="Image Description for #{image}"/>
-                                title="#{image}"/>
-            </p:galleria>
-        </div> 
+
+        <h:body>
+            <center>
+                <p:galleria value="#{carousel.images}" var="image" showCaption="true">
+                    <p:graphicImage url="imagenes/#{image}" width="500px" height="500px" title="#{image}">
+                        
+                    </p:graphicImage>
+                       
+                </p:galleria>
+            </center>
+
+        </h:body>     
+
+
     </ui:define>
 
 </ui:composition>
