--- a/web/Plantillas/PlantillaAdministrador.xhtml
+++ b/web/Plantillas/PlantillaAdministrador.xhtml
@@ -28,6 +28,8 @@
                                     <b:navLink value="Editar Productos" href="EditarProductos.xhtml"></b:navLink>
                                 </b:dropMenu>
                                 <b:navLink value="Administrador" href="indexAdministrador.xhtml"></b:navLink>
+                                <b:navLink value="Cerrar Sesión" onclick="confirm('¿Desea cerrar sesión?');" href="index.xhtml"></b:navLink>
+                                  
                                  <b:dropMenu value="Manual de Usuario">
                                     <b:navLink value="Manual de Usuario" href="manual.xhtml"></b:navLink>
                                 </b:dropMenu>
